--- a/package.json
+++ b/package.json
@@ -7,17 +7,24 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@astrojs/svelte": "^2.2.0",
     "@astrojs/tailwind": "^3.1.3",
+    "@fontsource/inter": "^5.0.3",
+    "@fontsource/jetbrains-mono": "^5.0.3",
     "astro": "^2.5.0",
     "svelte": "^3.54.0",
-    "tailwindcss": "^3.0.24"
+    "svelte-icons-pack": "^2.1.0"
   },
   "devDependencies": {
+    "daisyui": "^3.1.0",
+    "husky": "^8.0.0",
     "prettier": "^2.8.8",
-    "prettier-plugin-astro": "^0.9.1"
+    "prettier-plugin-astro": "^0.9.1",
+    "pretty-quick": "^3.1.3",
+    "tailwindcss": "^3.0.24"
   }
 }
