--- a/package.json
+++ b/package.json
@@ -3,28 +3,29 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "prepare": "husky install"
+    "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/svelte": "^2.2.0",
-    "@astrojs/tailwind": "^3.1.3",
-    "@fontsource/inter": "^5.0.3",
-    "@fontsource/jetbrains-mono": "^5.0.3",
-    "astro": "^2.5.0",
-    "svelte": "^3.54.0",
-    "svelte-icons-pack": "^2.1.0"
+    "@astrojs/svelte": "^5.7.1",
+    "@astrojs/tailwind": "^5.1.1",
+    "@fontsource/inter": "^5.1.0",
+    "@fontsource/jetbrains-mono": "^5.1.0",
+    "astro": "^4.15.8",
+    "svelte": "^4.2.19",
+    "svelte-icons-pack": "^3.1.3"
   },
   "devDependencies": {
-    "daisyui": "^3.1.0",
-    "husky": "^8.0.0",
-    "prettier": "^2.8.8",
-    "prettier-plugin-astro": "^0.9.1",
-    "pretty-quick": "^3.1.3",
-    "tailwindcss": "^3.0.24"
+    "daisyui": "^4.12.10",
+    "husky": "^9.1.6",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "pretty-quick": "^4.0.0",
+    "tailwindcss": "^3.4.12",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.7"
   }
 }
